# german-tenders

./: .env.example  .gitignore  CLAUDE.md  README.md  cli.py  docker-compose.yml  organizations.csv  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_background_jobs.py
data/: sample_api_response.json
docs/: data_gaps.md
scripts/: e2e_test.ps1  e2e_test.sh  setup.sh  setup_ollama.sh
src/: config.py
src/ai/: llm_client.py  prompts.py
src/background/: manager.py  worker.py
src/db/: models.py  repositories.py  session.py
src/documents/: analyzer.py  downloader.py  export_archiver.py  storage.py
src/i18n/: __init__.py  de_de.py  en_us.py  pt_br.py  pt_pt.py
src/ingestion/: api_client.py  enrichment.py  ocds_enricher.py  parser.py  scraper.py  tender_pipeline.py
src/matching/: matcher.py  query_generator.py
src/organizations/: csv_loader.py
src/search/: embeddings.py  hybrid.py  semantic.py  structured.py
tests/: conftest.py  test_config.py  test_documents.py  test_enrichment.py  test_export_archiver.py  test_i18n.py  test_ingestion.py  test_integration.py  test_matching.py  test_models.py  test_ocds_enricher.py  test_organizations.py  test_scraper.py  test_search.py
tests/fixtures/: sample_organizations.csv
