[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "german-tenders"
version = "0.1.0"
description = "German Tenders Intelligence Platform — Augusta Labs AI Challenge"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29,<1.0",
    "psycopg2-binary>=2.9,<3.0",
    "alembic>=1.13,<2.0",
    "httpx>=0.27,<1.0",
    "beautifulsoup4>=4.12,<5.0",
    "typer[all]>=0.12,<1.0",
    "rich>=13.0,<14.0",
    "pydantic-settings>=2.2,<3.0",
    "python-dotenv>=1.0,<2.0",
    "sentence-transformers>=3.0,<4.0",
    "pgvector>=0.3,<1.0",
    "minio>=7.2,<8.0",
    "structlog>=24.0,<26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-cov>=5.0,<6.0",
]

[project.scripts]
tenderx = "cli:app"

[tool.setuptools]
py-modules = ["cli"]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires Docker PostgreSQL (auto-skipped if DB unavailable)",
]
